[gd_scene load_steps=9 format=3 uid="uid://d38r2rlwblrqb"]

[ext_resource type="Script" path="res://Mobs/Drops/CarePackage.gd" id="1_0fshj"]
[ext_resource type="Texture2D" uid="uid://b0nor4pguyi3j" path="res://Assets/Sprites/Other/present.png" id="2_f4pal"]
[ext_resource type="Texture2D" uid="uid://djf0ne53wbttg" path="res://Assets/Ui/Art/Heart.PNG" id="3_kk38l"]
[ext_resource type="FontFile" uid="uid://biqnqlpie2y4k" path="res://GodotTdAssets/kenney_kenney-fonts/Fonts/Kenney Blocks.ttf" id="4_qxt81"]

[sub_resource type="CircleShape2D" id="CircleShape2D_5i18c"]
radius = 25.0799

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4ko51"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tyvr4"]
bg_color = Color(0.379944, 0.659671, 0.624937, 0.45098)
border_width_left = 1
border_width_top = 2
border_width_right = 1
border_width_bottom = 2
border_color = Color(0.188235, 0.027451, 0.027451, 0.301961)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7n6j4"]
bg_color = Color(0.243137, 0.470588, 0.694118, 0.537255)
border_width_left = 1
border_width_top = 2
border_width_right = 1
border_width_bottom = 2
border_color = Color(0.819608, 0.360784, 0.0823529, 0.8)
border_blend = true

[node name="StaticBody2D" type="StaticBody2D"]
collision_layer = 0
collision_mask = 7
script = ExtResource("1_0fshj")

[node name="TowerDefenseTile134" type="Sprite2D" parent="."]
scale = Vector2(0.8, 0.8)
texture = ExtResource("2_f4pal")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_5i18c")

[node name="Panel" type="Panel" parent="."]
modulate = Color(0.360784, 0.980392, 0.407843, 0)
offset_left = -25.0
offset_top = -25.0
offset_right = 25.0
offset_bottom = 25.0
pivot_offset = Vector2(25, 25)
theme_override_styles/panel = SubResource("StyleBoxFlat_4ko51")

[node name="UpgradeNode" type="Node" parent="."]

[node name="Panel" type="Panel" parent="UpgradeNode"]
visible = false
offset_left = -13.0
offset_top = -13.0
offset_right = 14.0
offset_bottom = 11.0
scale = Vector2(5, -3.524)
pivot_offset = Vector2(13.3933, 13.1619)
size_flags_horizontal = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_tyvr4")

[node name="HBox" type="HBoxContainer" parent="UpgradeNode/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -15.5067
offset_top = -17.8506
offset_right = 13.4933
offset_bottom = 12.1494
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.790851, 0.406084)
pivot_offset = Vector2(21.8789, 20.3065)

[node name="Health" type="Button" parent="UpgradeNode/Panel/HBox"]
custom_minimum_size = Vector2(12, 12)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_7n6j4")

[node name="Sprite2D" type="Sprite2D" parent="UpgradeNode/Panel/HBox/Health"]
position = Vector2(6.35271, 16.4211)
rotation = 3.14159
scale = Vector2(0.760601, 1.33401)
texture = ExtResource("3_kk38l")

[node name="Currency" type="Button" parent="UpgradeNode/Panel/HBox"]
custom_minimum_size = Vector2(12, 12)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_7n6j4")

[node name="Label" type="Label" parent="UpgradeNode/Panel/HBox/Currency"]
layout_mode = 0
offset_left = 1.47997
offset_top = 27.6018
offset_right = 13.48
offset_bottom = 50.6018
scale = Vector2(1, -1)
theme_override_fonts/font = ExtResource("4_qxt81")
theme_override_font_sizes/font_size = 15
text = "$"

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_shape_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="gui_input" from="Panel" to="." method="_on_panel_gui_input"]
[connection signal="pressed" from="UpgradeNode/Panel/HBox/Health" to="." method="_on_health_pressed"]
[connection signal="pressed" from="UpgradeNode/Panel/HBox/Currency" to="." method="_on_currency_pressed"]
